--- a/app/views/content/home.html.erb
+++ b/app/views/content/home.html.erb
@@ -1,26 +1,42 @@
-<div class="row">
-	<%= form_tag  do  %>
-		<div class="row">
-			<div class="span3 offset2"><img src="/assets/parabola-logo.png" class="img-polaroid"></div>
-				<h3 class="span3 offset8"><%= label_tag :username, 'Welcome to ' + session[:user_name] %></h3>
-		</div>
-		<div class="row">
-			<div class="span3 offset2"><h4>Parabola Social Network</h4></div>
-			<p class="span1 offset9"><%= link_to "Logout", login_path %></p>
-		</div>
-		</br></br></br>
+<%= form_tag  do  %>
+	<div class="row">
+		<div class="span3 offset2"><img src="/assets/parabola-logo.png" class="img-polaroid"></div>
+		<p class="span1 offset8"><img src="/assets/no_image.png" class="img-polaroid"></p>
+		<p class="span1 offste7"><%= label_tag 'Mobile' %><%= label_tag '--' %>
+			<%= label_tag 'Location' %><%= label_tag '--' %></p>
+	</div>
+		<div class="span3 offset2"><h4>Parabola Social Network</h4></div>
+		<div class="span3 offset7 dropdown">
+	    <!-- Link or button to toggle dropdown -->
+	    <a class="dropdown-toggle" data-toggle="dropdown" href="#"><h3 ><%= label_tag :username, 'Welcome to ' + session[:user_name].to_s %></h3><b class="caret"></b></a>
+	    <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+	    	<li><%= link_to "My Profile", myprofile_path %></li>
+	    	<li class="divider"></li>
+	    	<li><%= link_to "Logout", login_path %></li>
+	    </ul>
+    </div>
+    
+	</br></br></br>
 
-		<div class="row">
-			<img class="offset2" src="/assets/gallery.png" class="img-polaroid">
-			<img src="/assets/events.png" class="img-polaroid">
-			<img src="/assets/email.jpg" class="img-polaroid">
-			<img src="/assets/messages.png" class="img-polaroid">
-		</div>
-		<div class="row">
-			<p class="span2 offset3"><%= link_to "My Gallery", "/content/gallery" %></p>
-			<p class="span2"><%= link_to "Events", "/content/events" %></p>
-			<p class="span2"><%= link_to "Email", "/content/email" %></p>
-			<p class="span2"><%= link_to "My Messages", "/content/messages" %></p>
-		</div>
-	<% end %>
-</div>
+	<div class="row">
+		<img class="span2 offset2 img-polaroid" src="/assets/gallery.png">
+		<img class="span2 img-polaroid" src="/assets/events.png" >
+		<img class="span2 img-polaroid" src="/assets/email.jpg" >
+		<img class="span2 img-polaroid" src="/assets/messages.png" >
+		<img class="span2 img-polaroid" src="/assets/sports.jpg" >
+	</div>
+	<div class="row">
+		<p class="span2 offset2 text-center"><%= link_to "My Gallery", "/content/gallery" %></p>
+		<p class="span2 text-center"><%= link_to "Events", "/content/events" %></p>
+		<p class="span2 text-center"><%= link_to "Email", "/content/email" %></p>
+		<p class="span2 text-center"><%= link_to "My Messages", "/content/messages" %></p>
+		<p class="span2 text-center"><%= link_to "Sports", "/content/sports" %></p>
+	</div>
+<% end %>
+
+
+<script type="text/javascript">
+	 $(document).ready(function () {  
+        $('.dropdown-toggle').dropdown();  
+	});
+</script>
