--- a/app/views/content/login.html.erb
+++ b/app/views/content/login.html.erb
@@ -3,7 +3,7 @@
 	<div class="offset4"><h3>Parabola Social Network</h3></div>
 </br></br></br></br>
 	
-	<%= form_tag :action => "home" do %>
+	<%= form_tag :action => "signin" do %>
 		<div class="row">
 			<div class="span2 offset3"><%= label_tag 'User Name' %></div>
 			<%= text_field_tag 'User_Name' %>
@@ -18,7 +18,8 @@
 		</div>
 		</br>
 		<div class="row">
-			<div class="span3 offset5"><%= submit_tag 'Signin' %></div>
+			<div class="span3 offset5">
+			<input type="submit" value="Signin" class="btn" /></div>
 		</div>
 	<% end %>
 </div>
