--- a/app/views/gallery/gallery.html.erb
+++ b/app/views/gallery/gallery.html.erb
@@ -9,13 +9,13 @@
 </br></br></br>
 
 <div class="row">
-	<h5 class="span2 offset2"><%= session[:user_name] + '\'s Galleries' %> </h5>
+	<h5 class="span3 offset2"><%= session[:user_name] + '\'s Galleries' %> </h5>
 	<a class="span2 offset4" id="create_new" href="javascript:void();">Add Gallery</a>
 </div>
 <%= form_tag :action => 'add_gallery' do  %>
 	<% @gallery.each do |g| %>
 		<div class="span1 offset1">
-			<img src="/assets/no_image.png" class="img-polaroid">
+			<img src="/assets/no_image.png" class="img-polaroid thumbnail">
 			</br>
 			<p class="text-center"><%= link_to(g.name, gallery_path(g)) %></p>
 		</div>
