--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
 <body>
 
 <%= yield %>
-
+<div class="row offset2">
+	<% flash.each do |key, msg| %>
+		<%= content_tag :div, msg, :class => [key, " message"], :id => "notice_#{key}" %>
+	<% end %>
+</div>
 </body>
 </html>
