--- a/app/views/content/forgotpassword.html.erb
+++ b/app/views/content/forgotpassword.html.erb
@@ -11,7 +11,7 @@
 		
 		</br>
 		<div class="row">
-			<div class="span3 offset5"><%= submit_tag 'Send' %><%= submit_tag 'Cancel' %></div>
+			<div class="span3 offset5"><%= submit_tag 'Send', :class => 'btn' %>&nbsp;<%= link_to 'Cancel', login_path, :class => 'btn' %></div>
 		</div>
 	<% end %>
 </div>
